# LordTorch

./: .gitignore  CMakeLists.txt  README.md
docs/: api_examples.md  architecture.md  autograd_design.md  tensor_design.md
examples/: linear_regression.cpp  tensor_basics.cpp
include/mtorch/: mtorch.h
include/mtorch/autograd/: engine.h  node.h
include/mtorch/core/: device.h  exception.h  scalar_type.h  storage.h  tensor.h  tensor_impl.h  tensor_options.h
include/mtorch/nn/: linear.h  loss.h  module.h  parameter.h
include/mtorch/ops/: activation.h  creation.h  elementwise.h  matmul.h  reduction.h
include/mtorch/optim/: optimizer.h  sgd.h
include/mtorch/utils/: print.h
python/: CMakeLists.txt  setup.py
python/mtorch/: functional.py
scripts/: build.sh
src/autograd/: engine.cpp  node.cpp
src/core/: storage.cpp  tensor.cpp  tensor_impl.cpp
src/nn/: linear.cpp  loss.cpp  module.cpp  parameter.cpp
src/ops/: activation.cpp  creation.cpp  elementwise.cpp  matmul.cpp  reduction.cpp
src/optim/: optimizer.cpp  sgd.cpp
src/utils/: print.cpp
tests/: CMakeLists.txt  test_loss.cpp  test_reduction.cpp  test_tensor.cpp
